--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -6,4 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dependencies.uom]
+version = "0.29"
+default-features = false
+features = [
+    "i32", "i64", "f32", "f64", 
+    "si", "std"
+]
