--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -6,10 +6,5 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies.uom]
-version = "0.29"
-default-features = false
-features = [
-    "i32", "i64", "f32", "f64", 
-    "si", "std"
-]
+[dependencies]
+typenum = "1.12.0"
