--- a/units/Cargo.toml
+++ b/units/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "reswmm-core"
+name = "units"
 version = "0.1.0"
 authors = ["Reese Walton <jrwalt4@gmail.com>"]
 edition = "2018"
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-units = { path = "../units"}
+typenum = "1.12.0"
