--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-units = { path = "../units"}
+furlong = { path = "../furlong"}
