--- a/reswmm-cli/Cargo.toml
+++ b/reswmm-cli/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2018"
 
 [dependencies]
 reswmm-core = { path = "../reswmm-core" }
+
+[dependencies.clap]
+version = "~2.27.0"
+features = [ "yaml" ]
