--- a/reswmm-cli/Cargo.toml
+++ b/reswmm-cli/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-reswmm-core = { path = "../reswmm-core" }
+[dependencies.reswmm-core]
+path = "../reswmm-core"
+features = ["custom_elements"]
 
 [dependencies.clap]
 version = "~2.27.0"
