--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2018"
 [dependencies]
 furlong = { path = "../furlong"}
 enum_dispatch = "0.3"
+
+[features]
+custom_nodes = []
+custom_links = []
+custom_elements = ["custom_nodes", "custom_links"]
