--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-furlong = { path = "../furlong"}
+furlong = { path = "../../furlong"}
 enum_dispatch = "0.3"
+rusqlite = "0.28.0"
 
 [features]
 custom_nodes = []
