--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -10,6 +10,10 @@ edition = "2018"
 furlong = { git = "https://github.com/jrwalt4/furlong.git", branch = "main" }
 enum_dispatch = "0.3"
 rusqlite = "0.28.0"
+serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+serde_json = "1.0"
 
 [features]
 custom_nodes = []
