--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -11,6 +11,11 @@ furlong = { path = "../furlong"}
 enum_dispatch = "0.3"
 rusqlite = "0.28.0"
 serde = { version = "1.0", features = ["derive"] }
+chrono = "0.4.23"
+num-traits = "0.2.15"
+crossbeam-channel = "0.5"
+itertools = "0.10"
+futures = "0.3.26"
 
 [dev-dependencies]
 serde_json = "1.0"
