--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -14,7 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4.23"
 num-traits = "0.2.15"
 itertools = "0.10"
-specs = { version = "0.18", features = ["derive"]}
+hecs = "0.10"
 
 [dev-dependencies]
 serde_json = "1.0"
