--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -15,6 +15,7 @@ chrono = "0.4.23"
 num-traits = "0.2.15"
 itertools = "0.10"
 bevy = { version = "0.10", default-features = false, features = ["dynamic_linking"]}
+reswmm-macros = { path = "../reswmm-macros" }
 
 [dev-dependencies]
 serde_json = "1.0"
