--- a/reswmm-core/Cargo.toml
+++ b/reswmm-core/Cargo.toml
@@ -14,7 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4.23"
 num-traits = "0.2.15"
 itertools = "0.10"
-bevy = { version = "0.10", default-features = false, features = ["dynamic_linking"]}
+bevy_ecs = "0.10"
 reswmm-macros = { path = "../reswmm-macros" }
 
 [dev-dependencies]
