--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "rust-analyzer.lens.implementations.enable": false
+    "rust-analyzer.lens.implementations.enable": false,
+    "rust-analyzer.showUnlinkedFileNotification": false
 }
